# student-tools

./: .gitignore  README.md
canvas-grabber/: .env.example  .gitignore  LICENSE  README.md  auth.js  canvas-sync.sh  client.js  convert-canvas-slides.sh  grab.js  md-util.js  md-util.test.js  package-lock.json  package.json  parse.js  readings.js  schedule.test.js  vault-map.example.json
kortext/: CLAUDE.md  README.md  pyproject.toml
kortext/.claude/skills/kortext-import/: SKILL.md
kortext/.claude/skills/kortext-import/scripts/: auth.py  build_markdown.py  discover.py  scrape.py
kortext/.claude/skills/textbook-summarize/: SKILL.md
kortext/recon/: README.md  check_token.py  sniff_network.py
kortext/src/kortext/: api.py  cli.py  render.py
slides/: README.md  convert-slides  pyproject.toml
slides/src/slides/: convert.py  render.py
slides/tests/: test_defang.py
syllabus/: README.md  convert-syllabus  pyproject.toml
syllabus/src/syllabus/: convert.py  dates.py  docx2md.py  pdf2md.py
syllabus/tests/: test_defang.py  test_schedule.py
