[project]
name = "kortext-textbook-tool"
version = "0.1.0"
description = "Extract Kortext EPUBs into a local markdown corpus and summarize via Claude Code skills."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
]

[project.scripts]
kortext-auth = "src.kortext.cli:auth"
kortext-discover = "src.kortext.cli:discover"
kortext-scrape = "src.kortext.cli:scrape"
kortext-build = "src.kortext.cli:build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
