[project]
name = "slides-converter"
version = "0.1.0"
description = "Convert .pptx lecture slide decks to Obsidian-flavored markdown."
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=1.0",
]

[project.scripts]
convert-slides = "slides.convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slides"]
